--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,19 +9,15 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
   name = "Projects"
   url = "#projects"
   weight = 30
 
 [[main]]
-  name = "Talks"
-  url = "#talks"
-  weight = 40
+  name = "Competations"
+  url = "#Competations"
+  weight = 30
+
 
 [[main]]
   name = "Publications"
