--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,6 +14,11 @@
   weight = 30
   
 [[main]]
+  name = "Competations"
+  url = "#competations"
+  weight = 30
+  
+[[main]]
   name = "Publications"
   url = "#featured"
   weight = 50
