--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -7,10 +7,15 @@
   name = "Home"
   url = "#about"
   weight = 10
-
+ 
 [[main]]
   name = "Projects"
   url = "#projects"
+  weight = 30
+
+[[main]]
+  name = "Competations"
+  url = "#competations"
   weight = 30
     
 [[main]]
